@@ -2,12 +2,14 @@ package com.example.gadgetariumb8.db.service.impl;
 
 import com.example.gadgetariumb8.db.dto.response.SimpleResponse;
 import com.example.gadgetariumb8.db.dto.response.SubProductBasketResponse;
+import com.example.gadgetariumb8.db.exception.exceptions.BadRequestException;
 import com.example.gadgetariumb8.db.exception.exceptions.NotFoundException;
 import com.example.gadgetariumb8.db.model.SubProduct;
 import com.example.gadgetariumb8.db.model.User;
 import com.example.gadgetariumb8.db.repository.SubProductRepository;
 import com.example.gadgetariumb8.db.repository.UserRepository;
 import com.example.gadgetariumb8.db.service.BasketService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -15,7 +17,9 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -28,16 +32,16 @@ public class BasketServiceImpl implements BasketService {
     private User getAuthenticate() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String login = authentication.getName();
-        log.info("Token has been taken!");
+        log.info("Токен взят!");
         return userRepository.findUserInfoByEmail(login).orElseThrow(() -> {
-            log.error("User not found!");
-            return new NotFoundException("User not found!");
+            log.error("Пользователь не найден с токеном пожалуйста войдите или зарегистрируйтесь!");
+            return new NotFoundException("пользователь не найден с токеном пожалуйста войдите или зарегистрируйтесь");
         }).getUser();
     }
 
     @Override
     public List<SubProductBasketResponse> getAllBasket() {
-        log.info("Getting all basket!");
+        log.info("Получение всей корзины!");
         String sql = """
                 SELECT (SELECT spi.images FROM sub_product_images spi WHERE spi.sub_product_id = sp.id LIMIT 1) AS img,
                        p.id                                                                                        productId,
@@ -54,16 +58,27 @@ public class BasketServiceImpl implements BasketService {
                        ub.basket                                                                                as quantityProduct,
                        (SELECT ds.percent
                                from discounts ds
+                SELECT DISTINCT (SELECT spi.images FROM sub_product_images spi WHERE spi.sub_product_id = sp.id LIMIT 1) AS img,
+                       p.id AS productId, sp.id  AS subProductId, p.name AS names, sp.quantity AS quantity,
+                       sp.item_number AS itemNumber, sp.price AS price,p.rating as rating,
+                       (SELECT COUNT(r) FROM reviews r WHERE r.product_id = p.id) as numberOfReviews,
+                       ub.basket as quantityProduct,
+                       (SELECT d.percent from discounts d
                                where d.date_of_start <= CURRENT_DATE
-                                 and d.date_of_finish >= CURRENT_DATE and ds.id = d.id)                                             as percents
+                               AND d.date_of_finish >= CURRENT_DATE AND d.id = sp.discount_id) as percents,
+                       CASE WHEN uf IS NOT NULL THEN true ELSE false END AS isInFavorites     
                 FROM sub_products sp
                          JOIN products p ON p.id = sp.product_id
                          JOIN user_basket ub ON sp.id = ub.basket_key
                          JOIN users u ON ub.user_id = u.id
+
                          LEFT JOIN discounts d on d.id = sp.discount_id
+
+                         LEFT JOIN users_favorites uf ON u.id = uf.user_id AND uf.favorites_id = sp.id
                 WHERE u.id = ?
-                 """;
-        log.info("All baskets are successfully got!");
+                """;
+        log.info("Все корзины успешно получены!");
+        
         return jdbcTemplate.query(sql, (resultSet, i) ->
                 new SubProductBasketResponse(
                         resultSet.getLong("productId"),
@@ -76,7 +91,8 @@ public class BasketServiceImpl implements BasketService {
                         resultSet.getInt("itemNumber"),
                         resultSet.getBigDecimal("price"),
                         resultSet.getInt("percents"),
-                        resultSet.getInt("quantityProduct")
+                        resultSet.getInt("quantityProduct"),
+                        resultSet.getBoolean("isInFavorites")
                 ), getAuthenticate().getId()
         );
     }
@@ -84,14 +100,14 @@ public class BasketServiceImpl implements BasketService {
     @Override
     public SimpleResponse deleteBasket(List<Long> subProductsId) {
         User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
+                .orElseThrow(() -> new NotFoundException("Пользователь с id: "+ getAuthenticate().getId() +" не найден!!!"));
         if (subProductsId != null) {
             for (Long subProductId : subProductsId) {
                 jdbcTemplate.update("DELETE FROM user_basket ub where ub.user_id = ? and ub.basket_key = ?", user.getId(), subProductId);
             }
             userRepository.save(user);
             return SimpleResponse.builder()
-                    .message("Products successfully deleted").httpStatus(HttpStatus.OK).build();
+                    .message("Продукты успешно удалены").httpStatus(HttpStatus.OK).build();
         } else {
             return SimpleResponse.builder()
                     .httpStatus(HttpStatus.BAD_REQUEST)
@@ -101,50 +117,28 @@ public class BasketServiceImpl implements BasketService {
     }
 
     @Override
-    public SimpleResponse moveToFavorite(List<Long> longs) {
-        User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
-        for (Long aLong : longs) {
-            user.getFavorites().add(subProductRepository.findById(aLong)
-                    .orElseThrow(() -> new NotFoundException("Sub product with id:" + aLong + " not found!!!")));
-        }
-        userRepository.save(user);
-        return SimpleResponse.builder()
-                .message("Products have successfully moved to Favorites").httpStatus(HttpStatus.OK).build();
-    }
-
-    @Override
     public SimpleResponse deleteBasketById(Long id) {
         User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
+                .orElseThrow(() -> new NotFoundException(" Пользователь с id: "+ getAuthenticate().getId() +" не найден!!!"));
         jdbcTemplate.update("DELETE FROM user_basket ub where ub.user_id = ? and ub.basket_key = ?", user.getId(), id);
         userRepository.save(user);
         return SimpleResponse.builder()
-                .message("Product successfully deleted").httpStatus(HttpStatus.OK).build();
+                .message("Продукт успешно удален!!").httpStatus(HttpStatus.OK).build();
     }
 
     @Override
-    public SimpleResponse moveToFavoriteById(Long id) {
-        User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
-        user.getFavorites().add(subProductRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Sub product with id:" + id + " not found!!!")));
-        userRepository.save(user);
-        return SimpleResponse.builder()
-                .message("Products have successfully moved to Favorites").httpStatus(HttpStatus.OK).build();
-    }
-
-    @Override
-    public SimpleResponse saveBasket(Long id,int quantity) {
-        SubProduct subProduct = subProductRepository.findById(id)
-                .orElseThrow(()->new NotFoundException(String.format("Product with id %s is not found!", id)));
-        User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
-        user.getBasket().put(subProduct, quantity);
-        userRepository.save(user);
+    @Transactional
+    public SimpleResponse saveBasket(Long subProductId, int quantity) {
+        SubProduct subProduct = subProductRepository.findById(subProductId)
+                .orElseThrow(() -> new NotFoundException(String.format("Продукт с идентификатором %s не найден!", subProductId)));
+        User user = getAuthenticate();
+        if (user.getBasket().containsKey(subProduct)) {
+            throw new BadRequestException("Субпродукты с идентификатором %s уже есть в корзине".formatted(subProductId));
+        }
+        user.addToBasket(subProduct, quantity);
         return SimpleResponse.builder()
                 .httpStatus(HttpStatus.OK)
-                .message("Products have successfully saved!!!")
+                .message("Товары успешно сохранены!!!")
                 .build();
     }
 }
